--- a/templates/uredi_naputak.html
+++ b/templates/uredi_naputak.html
@@ -1,15 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Uredi naputak</title>
-</head>
-<body>
-    <h2>Uredi naputak za {{ vozilo.ime }}</h2>
-    <form method="post">
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Uredi naputak - {{ vozilo.ime }}{% endblock %}
+
+{% block content %}
+<div class="container mt-4">
+
+    <h2 class="mb-3">Uredi naputak za {{ vozilo.ime }}</h2>
+
+    <form method="post" class="row g-3">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Spremi promjene</button>
-        <a href="{% url 'detalji_vozila' vozilo.id %}">Odustani</a>
+
+        <div class="mt-3">
+            <button type="submit" class="btn btn-success me-2">💾 Spremi promjene</button>
+            <a href="{% url 'detalji_vozila' vozilo.id %}" class="btn btn-secondary">Odustani</a>
+        </div>
     </form>
-</body>
-</html>
+
+</div>
+{% endblock %}
