--- a/templates/vozila/dodaj_vozilo.html
+++ b/templates/vozila/dodaj_vozilo.html
@@ -1,13 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head><title>Dodaj vozilo</title></head>
-<body>
-<h2>Dodavanje novog vozila</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Spremi</button>
-</form>
-<p><a href="{% url 'popis_vozila' %}">Nazad</a></p>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Dodaj vozilo{% endblock %}
+
+{% block content %}
+<div class="container mt-4">
+
+    <!-- Naslov -->
+    <h2 class="mb-3">Dodavanje novog vozila</h2>
+
+    <!-- Forma za dodavanje vozila -->
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-success mt-2">💾 Spremi</button>
+                <a href="{% url 'popis_vozila' %}" class="btn btn-secondary mt-2 ms-2">🔙 Nazad</a>
+            </form>
+        </div>
+    </div>
+
+</div>
+{% endblock %}
