--- a/templates/base.html
+++ b/templates/base.html
@@ -19,11 +19,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
+        {% if request.user.is_authenticated %}
         <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == 'homepage' %}active{% endif %}" href="{% url 'homepage' %}">Početna</a></li>
         <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == 'popis_vozaca' %}active{% endif %}" href="{% url 'popis_vozaca' %}">Vozači</a></li>
         <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == 'popis_vozila' %}active{% endif %}" href="{% url 'popis_vozila' %}">Vozila</a></li>
-        {% if request.user.is_authenticated %}
-          <li class="nav-item"><a class="btn btn-sm btn-danger" href="{% url 'logout' %}">Odjava</a></li>
+        <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == 'cijene_dnevnica' %}active{% endif %}" href="{% url 'cijene_dnevnica' %}">Cijene dnevnica</a></li>
+        <li class="nav-item"><a class="btn btn-sm btn-danger" href="{% url 'logout' %}">Odjava</a></li>
         {% endif %}
       </ul>
     </div>
